refactor(domain): use List.getLast() for the latest attempt